# hpc_lab10

./: .gitignore  CMakeLists.txt  README.md  laplace-seq.cpp  laplace-seq.lst
